<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/editNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/room_number_hint"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/room_type_hint"
        android:minHeight="48dp"
        android:inputType="textPersonName"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/room_price_hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <CheckBox
        android:id="@+id/editAvailability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_available"
        android:minHeight="48dp" />

    <CheckBox
        android:id="@+id/editPets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allows_pets"
        android:minHeight="48dp" />

    <CheckBox
        android:id="@+id/editSmoking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoking_allowed"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update_room"
        tools:ignore="VisualLintButtonSize" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/forest_green"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_home_24"
        android:contentDescription="@string/back_to_home"
        android:layout_gravity="start"
        />
</LinearLayout>
